--- a/layout/paginas.css
+++ b/layout/paginas.css
@@ -5,7 +5,7 @@
 
 header h1 {text-align: center; font-weight: lighter; font-size: 1.4em; margin: 40px;}
 header p {font-size: large; width: 600px; margin: auto; text-align: justify; padding-bottom: 20px;}
-#p2 {width: 90vw; text-align: center;}
+#p2 {width: 90vw; text-align: center;} #p3 {display: none;}
 
 a {color: yellow; text-decoration: none;}
 a:hover {text-decoration: underline;}
@@ -43,4 +43,8 @@ h3 {margin-bottom: 10px;}
     header h1 {font-size: 1em;}
     header p {font-size: .8em; width: 300px;}
     .site_descrição {width: 80%;}
+}
+@media (max-width: 500px) {
+    #p2 {display: none;}
+    #p3 {display: block; margin-left: 70px;}
 }
