--- a/layout/style.css
+++ b/layout/style.css
@@ -7,7 +7,7 @@ header img, aside img {width: 100vw;}
 h1, h2 {display: none;}
 
 #info {background-color: black; color: white; padding: 40px 150px; line-height: 2em;}
-#info p {text-align: justify;}
+#info p {text-align: justify;}  #info div {padding-left: 20px;} 
 ul {margin-left: 40px;}
 
 .portfolio {display: flex; max-width: 800px; margin: auto; padding: 30px 0 80px 0;}
