--- a/layout/rodape.css
+++ b/layout/rodape.css
@@ -2,7 +2,7 @@
 
 footer {background-color: black; color: white; padding: 40px;}
 #rodape1, #rodape2 {line-height: 1.5em;}
-#rodape1 div {display: flex; justify-content: center;}
+#rodape1 {text-align: center;}
 #rodape2 {display: none;}
 
 @media (max-width: 650px) {
